# bjvm

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: array_klass.cc  array_klass.h  array_object.cc  array_object.h  base_klass.cc  base_klass.h  byte_reader.cc  byte_reader.h  bytecode_interpreter.cc  bytecode_interpreter.h  class_instance.cc  class_instance.h  classfile.cc  classfile.h  constant_pool.cc  constant_pool.h  execution_frame.cc  execution_frame.h  heap_object.cc  heap_object.h  main.cc  object_array_klass.cc  object_array_klass.h  primitive_array_klass.cc  primitive_array_klass.h  string_interner.cc  string_interner.h  utilities.cc  utilities.h  vm.cc  vm.h
src/native/: class.cc  class.h  string.cc  string.h
test/: .gitignore  tests.cc
